# agda-reference-filter

./: .gitignore  LICENSE  README.md  agda-reference-filter.cabal  stack.yaml
example/: example.html  example.lagda.md  example.md
src/: Main.hs
